--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <!--=============== CSS ===============-->
 
-      <link rel="stylesheet" href="assets/css/styles.css">
+      <link rel="stylesheet" href="styles.css">
 
 
 
@@ -62,7 +62,7 @@
 
       <!--=============== MAIN JS ===============-->
 
-      <script src="assets/js/main.js"></script>
+      <script src="main.js"></script>
 
    </body>
 
